--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body {
 
 }
 
-section {
+main {
     background-image: url("imagem/daliOK.jpg");
     border-radius: 10px ;
     padding: 10px;
@@ -35,6 +35,7 @@ section {
     border-radius: 9px;
     font-style: italic;
     font-size: 13pt;
+    margin: auto;
 }
 
 #res {
